# logic/src/main/java/com/fronteers/controllers/AppointmentController.java
@@ -6,11 +6,14 @@ import com.fronteers.brightlife.model.AppointmentSearch;
 import com.fronteers.brightlife.model.PaginatedAppointments;
 import com.fronteers.brightlife.model.Success;
 import com.fronteers.brightlife.model.TimeSlots;
+import com.fronteers.brightlife.model.UpdateAppointmentStatus;
 import com.fronteers.services.AppointmentService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 
+@Slf4j
 @RequiredArgsConstructor
 @Controller
 public class AppointmentController implements AppointmentApi {
@@ -39,6 +42,14 @@ public class AppointmentController implements AppointmentApi {
   @Override
   public ResponseEntity<Success> updateAppointment(Appointment request) {
     return null;
+  }
+
+  @Override
+  public ResponseEntity<Success> changeStatus(Long id, UpdateAppointmentStatus request){
+    log.info("Changing Appointment {} to status {}", id, request.getStatus());
+    Success response = appointmentService.changeAppointmentStatus(id, request);
+    log.info("Appointment status successfully changed to {}", request.getStatus());
+    return ResponseEntity.ok(response);
   }
 
   @Override
